# omnidesk

./: .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  OmniDesk-onefile.spec  OmniDesk.spec  README.md  build_windows.bat  install_windows.bat  main.py  pyproject.toml  pytest.ini  requirements-dev.in  requirements-dev.txt  requirements.in  requirements.txt
.github/workflows/: ci.yml
omnidesk/: __init__.py  __main__.py  app.py  theme.py
omnidesk/ui/: column_browser.py  column_browser_helpers.py  column_browser_model.py  column_browser_operations.py  column_browser_views.py  file_browser_actions.py  file_browser_background.py  file_browser_drop.py  file_browser_helpers.py  file_browser_media_mode.py  file_browser_navigation.py  file_browser_selection.py  file_browser_sort.py  file_browser_status.py  file_browser_tab.py  file_browser_visible.py  file_operation_jobs.py  file_operations.py  icons.py  main_window.py  media_file_system_model.py  media_icon_provider.py  shortcuts_dialog.py  tab_bar_helpers.py  tab_container.py  thumbnail_jobs.py
omnidesk/ui/file_browser/: __init__.py  actions.py  clipboard.py  command_runner.py  delegates.py  navigation_controller.py  operations_controller.py  sort_model.py  status_controller.py  thumbnail_controller.py  toolbar.py  views.py
omnidesk/utils/: config.py  logging_config.py  paths.py  perf.py  resources.py  thumbnail_cache.py  windows_theme.py
packaging/pyinstaller/: OmniDesk-onefile.spec  OmniDesk.spec
scripts/: build-windows.ps1  check-parallel.ps1  check.ps1  compile-requirements.ps1  install-windows.ps1
tests/: conftest.py  test_app_theme_and_model.py  test_column_browser.py  test_file_browser_actions.py  test_file_browser_background.py  test_file_browser_drop.py  test_file_browser_helpers.py  test_file_browser_inline_rename.py  test_file_browser_media_mode.py  test_file_browser_navigation_media_selection.py  test_file_browser_selection.py  test_file_browser_sort.py  test_file_browser_sort_model.py  test_file_browser_tab_widget.py  test_file_browser_visible.py  test_file_operation_jobs.py  test_file_operations.py  test_logging_config.py  test_main_window.py  test_perf.py  test_shortcuts_dialog.py  test_tab_bar_helpers.py  test_tab_container.py  test_thumbnail_cache.py  test_thumbnail_jobs.py  test_thumbnail_provider.py  test_utils_config_paths_resources.py  test_windows_theme.py  verify_async_behavior.py
tests/manual/: verify_async_behavior.py
